syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "RebtelTest.Web.Protos";

service LibraryManager
{
    rpc GetMostBorrowedBooks (GetMostBorrowedBooksRequest) returns(Books);
    rpc GetBorrowedAvailableStatus(GetBorrowedAvailableStatusRequest) returns (GetBorrowedAvailableStatusResponse);
    rpc GetUsersBorrowedMostBooks(GetUsersBorrowedMostBooksRequest) returns (GetUsersBorrowedMostBooksResponse);
    rpc GetUserBorrowedBooks(GetUserBorrowedBooksRequest) returns (Books);
    rpc GetPossibleRelatedBooks(GetPossibleRelatedBooksRequest) returns (Books);
}

message GetMostBorrowedBooksRequest {}

message Book {
  string name = 1;
}

message Books {
  repeated Book bookList =1;
}

message GetBorrowedAvailableStatusRequest
{
    int32 bookId = 1;
}

message GetBorrowedAvailableStatusResponse
{
    string status = 1;
}

message GetUsersBorrowedMostBooksRequest
{
    google.protobuf.Timestamp fromDate = 1;
    google.protobuf.Timestamp toDate = 2;
}

message GetUsersBorrowedMostBooksResponse
{
    repeated string names = 1;
}

message GetUserBorrowedBooksRequest
{
    int32 userId = 1;
    google.protobuf.Timestamp fromDate = 2;
    google.protobuf.Timestamp toDate = 3;
}

message GetPossibleRelatedBooksRequest
{
    int32 bookId = 1;
}
